--- a/root/css/theme.css
+++ b/root/css/theme.css
@@ -144,6 +144,9 @@ select#mediaSourceSelector
 {
 	display: block;
 	width: 100%;
+	border: 0px;
+	background: none;
+	padding: 0ex 1ex;
 }
 
 #folderlist>li
